[package]
name = "rsexp"
version = "0.1.2"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "S-expression manipulation."
repository = "https://github.com/LaurentMazare/rsexp"
keywords = ["s-expression", "sexp", "serialization"]
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = ["rsexp-derive"]

[dependencies]
nom = "7.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
clap = "3.0.0-beta.5"
tracing = "0.1"
tracing-subscriber = "0.2"
rsexp-derive = { version = "0.1.0", path = "rsexp-derive" }
