[package]
name = "rsexp"
version = "0.2.3"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2021"

description = "S-expression manipulation."
repository = "https://github.com/LaurentMazare/rsexp"
keywords = ["s-expression", "sexp", "serialization"]
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = ["rsexp-derive"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
clap = { version = "3.0.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
rsexp-derive = { version = "0.2.3", path = "rsexp-derive" }
criterion = "0.4"
rand = "0.8.4"
rand_pcg = "0.3.1"

[[bench]]
name = "rsexp_benchmark"
harness = false

[profile.bench]
debug=true
